# HPC-Learning

./: .gitignore  CMakeLists.txt  README.md
00_University/01_openmp/: CMakeLists.txt
00_University/01_openmp/docs/: justificacion_diseno.md  roadmap.md
00_University/01_openmp/include/: io_utils.h
00_University/01_openmp/include/models/: centroids.h  column_stats.h  dataset.h
00_university/01_OpenMP/docs/: roadmap.md
00_university/01_OpenMP/include/: kmeans.h  stats.h
00_university/01_OpenMP/src/: io_utils.cpp  kmeans.cpp  main.cpp  stats.cpp
01_Foundation/01_Tour_of_CPP/: tips.md
01_Foundation/01_Tour_of_CPP/1_physics_engine/: simulation.cpp
01_Foundation/01_Tour_of_CPP/2_memory_manager/: main.cpp  matrix.h
01_Foundation/01_Tour_of_CPP/3_generic_solver/: CMakeLists.txt
01_Foundation/Tour_of_CPP/: .gitignore  CMakeLists.txt  example.cpp  tips.md
01_Foundation/Tour_of_CPP/1_The_Basics/: 1_PhysicsCalculator  2_ReferenceExperiment  3_ArrayScanner  CMakeLists.txt  Tips.md
01_Foundation/Tour_of_CPP/1_The_Basics/Exercises/: 1_PhysicsCalculator.cpp  3_ArrayScanner.cpp
01_Foundation/Tour_of_CPP/1_physics_engine/: constants.h  particle.h  simulation.h
01_Foundation/Tour_of_CPP/2_User_Defined_Types/: 1_Padding_Experiment  2_Grid_Manager  3_Message_Parser  4_Message_Parser_Variant  CMakeLists.txt  Tips.md
01_Foundation/Tour_of_CPP/2_User_Defined_Types/Exercises/: 1_Padding_Experiment.cpp  2_Grid_Manager.cpp  3_Message_Parser.cpp  4_Message_Parser_Variant.cpp
01_Foundation/Tour_of_CPP/2_memory_manager/: matrix.cpp
01_Foundation/Tour_of_CPP/3_Modularity/: 1_Modular_Namespaces  2_Multi_Return  3_Zero_Copy_Return  CMakeLists.txt  Tips.md
01_Foundation/Tour_of_CPP/3_Modularity/Exercises/1_Modular_Namespaces/: main.cpp  math_utils.cpp  math_utils.h
01_Foundation/Tour_of_CPP/3_Modularity/Exercises/2_Multi_Return/: main.cpp  search_result.cpp  search_result.h
01_Foundation/Tour_of_CPP/3_Modularity/Exercises/3_Zero_Copy_Return/: big_vector.cpp  big_vector.h  main.cpp
01_Foundation/Tour_of_CPP/3_generic_solver/include/: linear_system.h
01_Foundation/Tour_of_CPP/4_Error_Handling/: CMakeLists.txt  Tips.md
01_Foundation/Tour_of_CPP/4_Error_Handling/Exercises/: 1_Square_Matrix.cc
01_Foundation/Tour_of_CPP/4b_matrix_library/: big_squared_matric.cc  big_squared_matrix.cc  big_squared_matrix.h
01_Foundation/Tour_of_CPP/5_classes /: tips.md
01_Foundation/Tour_of_CPP/5_classes /1_concrete_types/: vector.h
01_Foundation/Tour_of_CPP/5_classes /1_concrete_types /: complex.h
01_Foundation/Tour_of_CPP/5_classes /2_abstract_type /: vector_container.h
01_Foundation/Tour_of_CPP/5_classes /2_abstract_types/: container.h  list.h  vector_container.h
01_Foundation/Tour_of_CPP/5_classes /3_class_hierarchies/: circle.h  point.h  shape.h  smiley.h  triangle.h
01_Foundation/Tour_of_CPP/6_essential_operations/: tips.md
01_Foundation/Tour_of_CPP/6_essential_operations/1_copy_move/: vector.h
01_Foundation/Tour_of_CPP/7_templates/1_parameterized_types/: buffer.h  vector.h
01_Foundation/Tour_of_CPP/7_templates/2_parameterized_operations/: main.cpp  operations.h
01_Foundation/Tour_of_CPP/7_templates/3_template_mechanisms/: main.cpp  mechanisms.h
01_Foundation/Tour_of_CPP/Basics/: Tips.md
01_Foundation/Tour_of_CPP/Basics/Exercises/: 1_PhysicsCalculator.cpp  2_ReferenceExperiment.cpp  3_ArrayScanner.cpp
01_fundamentals/01_tour_of_cpp/: tips.md
01_fundamentals/01_tour_of_cpp/1_physics_engine/: main.cpp
01_fundamentals/01_tour_of_cpp/3_generic_solver/src/: main.cpp
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/: CMakeLists.txt
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/include/: log_analyzer.h  log_generator.h
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/include/models/: log_entry.h
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/src/: log_analyzer.cpp  log_generator.cpp  main.cpp
